@@ -1,3 +1,9 @@
+2013-02-16  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/gsc/GSContext.m
+	* Source/x11/XGServerWindow.m
+	Adopt to changes in gui.
+
 2013-02-10  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/cairo/CairoGState.h
